# hikami

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md  build.rs  guest.dtb  host.dtb  linker.ld  memory.x  rust-toolchain.toml
.cargo/: config  config.toml
.github/workflows/: rust.yml  tag.yml
extension_manager/: Cargo.toml  build.rs
extension_manager/src/: lib.rs
guest_image/: .config  README.md  build_dtb.sh  fpga.dts  guest.dts  host.dts
src/: csrs.rs  device.rs  emulate_extension.rs  guest.rs  h_extension.rs  hypervisor_init.rs  init.rs  log.rs  machine_init.rs  main.rs  memmap.rs  sbi.rs  start.rs  supervisor_init.rs  trap.S  trap.rs  uart.rs  util.rs
src/device/: axi_sdc.rs  clint.rs  initrd.rs  iommu.rs  pci.rs  plic.rs  rtc.rs  uart.rs  virtio.rs
src/device/axi_sdc/: register.rs
src/device/iommu/: register_map.rs
src/device/pci/: config_register.rs  iommu.rs  sata.rs
src/device/pci/sata/: command.rs
src/emulate_extension/: zbb.rs  zicfiss.rs
src/guest/: context.rs
src/h_extension/: csrs.rs  instruction.rs
src/memmap/: constant.rs  device.rs  page_table.rs
src/memmap/device/: initrd.rs  plic.rs  uart.rs  virtio.rs
src/memmap/page_table/: sv39.rs  sv39x4.rs  sv57.rs
src/sbi/: rfence.rs
src/trap/: exception.rs  hypervisor_supervisor.rs  interrupt.rs  machine.rs  supervisor.rs
src/trap/exception/: instruction_handler.rs  page_fault_handler.rs  sbi_handler.rs
src/trap/hypervisor_supervisor/: exception.rs  interrupt.rs
src/trap/hypervisor_supervisor/exception/: instruction_handler.rs  page_fault_handler.rs  sbi.rs  sbi_handler.rs
src/trap/machine/: exception.rs  interrupt.rs
