[package]
name = "hikami"
version = "1.1.1"
edition = "2021"

[lints.clippy]
pedantic = "warn"
missing_docs_in_private_items = "warn"

[lints.rust]
missing_docs = "warn"

[lints.rustdoc]
missing_crate_level_docs = "warn"


[features]
# debug log
debug_log = []

[dependencies]
elf = { version = "0.7.2", default-features = false }
fdt = "0.1.5"
linked_list_allocator = "0.10.5"
raki = "1.3.1"
riscv = "0.11.1"
rustsbi = { version = "0.4.0" }
sbi-rt = "0.0.3"
sbi-spec = { version = "0.0.8", features = [ "legacy" ] }
spin = "0.9.8"
